# njs-mywork-bot

./: .cursorrules  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  config.yaml  pyproject.toml
example/: send_slack_message.py  summarize_email.py
scripts/: delete_all_message.py  regist_service.bat  start_service.bat  unregist_service.bat
src/: main.py
src/bot/: __init__.py  app.py  config.py  filesystem_health.py  slack_app.py  slack_bot_mail_app.py  slack_bot_task_app.py
src/bot/commands/: __init__.py  base.py  delete.py  get.py  list.py  put.py  update_attendance.py  update_paid_leave.py  usage.py  work_commands.py
src/bot/handlers/: __init__.py  message_handler.py  validation.py  work_command_handler.py  work_handler.py
src/bot/services/: __init__.py
src/bot/services/chatbot/: mail_chatbot.py  simple_chatbot.py  work_chatbot.py
src/bot/tools/: work_tools.py
src/bot/tools/work_tools/: __init__.py  attendance.py  datetime_tool.py  file_deleter.py  file_lister.py  file_receiver.py  file_sender.py  paid_leave.py  timecard.py  types.py
src/bot/utils/: file_restriction.py  logging.py  message.py  security.py
src/slack_assistant_bot/: __init__.py  app.py  config.py
src/slack_assistant_bot/handlers/: message_handler.py  validation.py  work_command_handler.py
src/slack_assistant_bot/services/: storage.py
src/slack_assistant_bot/services/chatbot/: simple_chatbot.py  work_chatbot.py
src/slack_assistant_bot/utils/: logging.py
tests/: conftest.py  test_config.py  test_handlers.py  test_services.py
