[project]
name = "slack-assistant-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mito99", email = "mito@live.jp" }
]
requires-python = ">=3.11"
dependencies = [
    "pydantic-settings>=2.7.0",
    "pydantic>=2.10.3",
    "python-dotenv>=1.0.1",
    "slack-bolt>=1.21.3",
    "langchain-google-genai>=2.0.7",
    "pyyaml>=6.0.2",
    "pytest>=8.3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
